[gd_scene load_steps=5 format=3 uid="uid://buvouxkkc7wot"]

[ext_resource type="Texture2D" uid="uid://cejtuu5a1uvft" path="res://assets/image/garden/Zen_WheelBarrow.png" id="1_e5nea"]
[ext_resource type="Script" uid="uid://cjkwfuxysd5ai" path="res://scripts/garden/Item/garden_item_08_wheel_barrow.gd" id="1_r61dk"]
[ext_resource type="Script" uid="uid://6vbmkjgmo5v0" path="res://scripts/garden/plant_cell_garden.gd" id="3_dmymv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dmymv"]
radius = 0.1

[node name="WheelBarrow" type="Node2D"]
script = ExtResource("1_r61dk")

[node name="Body" type="Node2D" parent="."]

[node name="ZenWheelBarrow" type="Sprite2D" parent="Body"]
texture = ExtResource("1_e5nea")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_dmymv")

[node name="PlantCellGarden" type="Control" parent="."]
z_index = 100
custom_minimum_size = Vector2(75, 75)
layout_mode = 3
anchors_preset = 0
offset_left = -11.0
offset_top = -32.0
offset_right = 64.0
offset_bottom = 43.0
scale = Vector2(0.6, 0.6)
mouse_filter = 2
script = ExtResource("3_dmymv")

[node name="Panel" type="Panel" parent="PlantCellGarden"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlantDownContainer" type="Control" parent="PlantCellGarden"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.5
offset_top = 10.5
offset_right = 0.5
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlantFloatContainer" type="Control" parent="PlantCellGarden"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.5
offset_top = -30.5
offset_right = 0.5
offset_bottom = -30.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlantNormContainer" type="Control" parent="PlantCellGarden"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlantShellContainer" type="Control" parent="PlantCellGarden"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
